Updated link to latex installation guide in how-to and renamed output to "rulebook.*" rather than "light.*".

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,7 @@
             "args": [
                 "-xelatex",
                 "-outdir=out",
+                "-jobname=rulebook",
                 "light.tex"
             ]
         }
